force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/IME_Contract_Conga_URLs__mdt.object-meta.xml
<CustomObject>
    <description>Store the meta data for countries to use the capabilities</description>
    <label>IME Contract Conga URL</label>
    <pluralLabel>IME Contract Conga URLs</pluralLabel>
</CustomObject>