force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Capped_Percentage_Services__c.field-meta.xml
<CustomField>
    <fullName>Capped_Percentage_Services__c</fullName>
    <label>Capped Percentage (Services)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>