force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/CC_Signer__c.field-meta.xml
<CustomField>
    <fullName>CC_Signer__c</fullName>
    <label>CC Signer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>