force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Conga_Params__c.field-meta.xml
<CustomField>
    <fullName>Conga_Params__c</fullName>
    <label>Conga Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>