force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Contract_Term_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Type__c</fullName>
    <label>Contract Term Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>