force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>Contract_Version__c</fullName>
    <label>Contract Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>