force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Email_message__c.field-meta.xml
<CustomField>
    <fullName>Email_message__c</fullName>
    <label>Email message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>