force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Email_subject__c.field-meta.xml
<CustomField>
    <fullName>Email_subject__c</fullName>
    <label>Email subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>