force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Expiration_Notice_days__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Notice_days__c</fullName>
    <label>Expiration Notice (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>