force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Fixed_Pricing_Period_months_Prod_S__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Pricing_Period_months_Prod_S__c</fullName>
    <label>Fixed Pricing Period (months) (Prod. S.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>