force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Fixed_Pricing_Period_months_Storage__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Pricing_Period_months_Storage__c</fullName>
    <label>Fixed Pricing Period (months) (Storage)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>