force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Index_Product_Sales__c.field-meta.xml
<CustomField>
    <fullName>Index_Product_Sales__c</fullName>
    <label>Index (Product Sales)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>