force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Index_Services__c.field-meta.xml
<CustomField>
    <fullName>Index_Services__c</fullName>
    <label>Index (Services)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>