force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Index_Storage__c.field-meta.xml
<CustomField>
    <fullName>Index_Storage__c</fullName>
    <label>Index (Storage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>