force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Index_Transport__c.field-meta.xml
<CustomField>
    <fullName>Index_Transport__c</fullName>
    <label>Index (Transport)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>