force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Internal_Signatories__c.field-meta.xml
<CustomField>
    <fullName>Internal_Signatories__c</fullName>
    <label>Internal Signatories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>