force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Liability_Currency__c.field-meta.xml
<CustomField>
    <fullName>Liability_Currency__c</fullName>
    <label>Liability Currency</label>
    <length>15</length>
    <type>Text</type>
</CustomField>