force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Max_Liability__c.field-meta.xml
<CustomField>
    <fullName>Max_Liability__c</fullName>
    <label>Max Liability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>