force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Price_Increase_Type_Services__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Type_Services__c</fullName>
    <label>Price Increase Type (Services)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>