force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Price_Increase_Type_Transport__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Type_Transport__c</fullName>
    <label>Price Increase Type (Transport)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>