force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Renewal_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_months__c</fullName>
    <label>Renewal Term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>