force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Signing_Order__c</fullName>
    <label>Signing Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>