force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/fields/Special_Terms_Other_Transp__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Other_Transp__c</fullName>
    <label>Special Terms ‘Other’ (Transp.)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>