force-app/main/default/objects/IME_Contract_Conga_URLs__mdt/listViews/IME_Contract_Conga_URLs.listView-meta.xml
<ListView>
    <fullName>IME_Contract_Conga_URLs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Conga_Params__c</columns>
    <columns>Country__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>IME Contract Conga URLs</label>
    <language>en_US</language>
</ListView>